# sdltm2tmx

./: .gitignore  README.md  cli.py  sdltm2tmx.py  setup.cfg  setup.py
docs/: index.html
docs/style/css/: main.css  main.scss
sdltm2tmx/: __init__.py  config.py  db.py  gui.py  sdltm2tmx.py  sdltm2tmx_cli.py  tmxlib.py  tmxwriter.py
