[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = sdltm2tmx
version = 2.0.1
description = Convert sdltm translation memories to tmx1.4
license = gplv3
license_files =
  COPYING

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  click
  lxml

[options.entry_points]
console_scripts =
  sdltm2tmx=sdltm2tmx.sdltm2tmx_cli:main
